--- a/Bio.html
+++ b/Bio.html
@@ -5,22 +5,28 @@
     </head>
     <body>
         <header> 
-            <h1>Activity: Basic Student Bio</h1>
+            <h1 style="color:darkblue" style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif " >Activity: Basic Student Bio
+            </h1>
         </header>
-        <h2> Student Bio</h2>
-        <img style width=200 length =200 src= "Snowy.JPG" alt = 200x200>
-        <h3> Shashini Mayadunne</h3>
+        <section>
+            <h2 style="color:darkred;"> Student Bio</h2>
+            <img style width=200 length =200 src= "images/snowy.jpg" alt = "Picture with Snowy">
+            <h3 style="color:mediumblue"> Shashini Mayadunne</h3>
 
-            <p>
+                <p>
                 I am a podiatrist currently in my 5th year of practice. I am here as I am considering a career change. 
-            </p>
-        <h3> Contact Info </h3>
-            <p>
+                </p>
+        </section>
+
+        <footer>
+            <h3 style="color:mediumblue"> Contact Info </h3>
+                <p> 
                 <ul>
-                    <li> <b>Email:</b> shash833@gmail.com</li>
+                    <li> <b>Email:</b> <a href="shash833@gmail.com">shash833@gmail.com </a></li>
                     <li> <b>GitHub:</b> Shash833</li>
                     <li> <b>Portfolio:</b> Coming Soon</li>
                 </ul>
             </p>
+        </footer>
     </body>
 </html>
